clusters/pk3s/cv-datastar/ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cv-datastar-https
  namespace: cv-datastar
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cv.watchtoken.org`)
      middlewares:
        - name: redirect-to-alacaba
          namespace: cv-datastar
      services:
        - name: cv-datastar
          port: 8080
  tls: {}
