clusters/pk3s/cv-datastar/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cv-datastar
  namespace: cv-datastar
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cv.watchtoken.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: cv-datastar
          port: 8080
    - kind: Rule
      match: Host(`cv.local`)
      services:
        - name: cv-datastar
          port: 8080
